--- a/f/fo/foo/foodinsight.org.html
+++ b/f/fo/foo/foodinsight.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the foodinsight.org privacy policy that was archived on 2016-11-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161129122252id_/http%3A//www.foodinsight.org/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the foodinsight.org privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606014214id_/http%3A//www.foodinsight.org/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN" "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" version="XHTML+RDFa 1.0" dir="ltr" xmlns:og="http://ogp.me/ns#" xmlns:article="http://ogp.me/ns/article#" xmlns:book="http://ogp.me/ns/book#" xmlns:profile="http://ogp.me/ns/profile#" xmlns:video="http://ogp.me/ns/video#" xmlns:product="http://ogp.me/ns/product#" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:dc="http://purl.org/dc/terms/" xmlns:foaf="http://xmlns.com/foaf/0.1/" xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#" xmlns:sioc="http://rdfs.org/sioc/ns#" xmlns:sioct="http://rdfs.org/sioc/types#" xmlns:skos="http://www.w3.org/2004/02/skos/core#" xmlns:xsd="http://www.w3.org/2001/XMLSchema#"><head profile="http://www.w3.org/1999/xhtml/vocab">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -21,10 +21,10 @@
 <meta name="twitter:title" content="Privacy Policy">
   <title>Privacy Policy - IFIC Foundation - Your Nutrition and Food Safety Resource</title>
   <link type="text/css" rel="stylesheet" href="http://www.foodinsight.org/sites/default/files/css/css_xE-rWrJf-fncB6ztZfd2huxqgxu4WO-qwma6Xer30m4.css" media="all">
-<link type="text/css" rel="stylesheet" href="http://www.foodinsight.org/sites/default/files/css/css_pPB04SODSJst6qo-YB3LKzaNyiT-myFTVT41jMSuFmA.css" media="all">
+<link type="text/css" rel="stylesheet" href="http://www.foodinsight.org/sites/default/files/css/css_hMRbswpwS3s0z7oT4UHqKHTpsO1C0DahZp50a40uSeA.css" media="all">
 <link type="text/css" rel="stylesheet" href="http://www.foodinsight.org/sites/default/files/css/css_iwI309yAzVKJ4HYC0Tbz48yTBB0yUux3fFLuB5zqgyc.css" media="all">
 <link type="text/css" rel="stylesheet" href="http://www.foodinsight.org/sites/default/files/css/css_4nGRvqebPjnxU_8fhcz8d3pyZISSH8_nY4UHgdPime4.css" media="all">
-  <script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-WM8BSC"></script><script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.0"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="http://www.foodinsight.org/sites/default/files/js/js_UWQINlriydSoeSiGQxToOUdv493zEa7dpsXC1OtYlZU.js"></script>
+  <script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-WM8BSC"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.0"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="http://www.foodinsight.org/sites/default/files/js/js_UWQINlriydSoeSiGQxToOUdv493zEa7dpsXC1OtYlZU.js"></script>
 <script type="text/javascript" src="http://www.foodinsight.org/sites/default/files/js/js_2FQNl5myxloaZNPNtv9mNDuScVzAn5NFUh8Rd7wxgjY.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
@@ -39,7 +39,7 @@ if (stLight !== undefined) { stLight.options({"publisher":"dr-f7434a32-d89e-3f4d
 </script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"ific","theme_token":"zEsqFDRq7KDNbGfoyp7J6RTvEoUtGpF5BOFHCvsU4ps","js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"sites\/all\/libraries\/colorbox\/jquery.colorbox-min.js":1,"sites\/all\/modules\/colorbox\/js\/colorbox.js":1,"sites\/all\/modules\/colorbox\/styles\/default\/colorbox_style.js":1,"sites\/all\/modules\/custom_search\/js\/custom_search.js":1,"0":1,"http:\/\/w.sharethis.com\/button\/buttons.js":1,"1":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"sites\/all\/modules\/simplenews\/simplenews.css":1,"sites\/all\/modules\/calendar\/css\/calendar_multiday.css":1,"modules\/comment\/comment.css":1,"sites\/all\/modules\/date\/date_api\/date.css":1,"sites\/all\/modules\/date\/date_popup\/themes\/datepicker.1.7.css":1,"modules\/field\/theme\/field.css":1,"sites\/all\/modules\/google_appliance\/theme\/google_appliance.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/views\/css\/views.css":1,"sites\/all\/modules\/ckeditor\/css\/ckeditor.css":1,"sites\/all\/modules\/colorbox\/styles\/default\/colorbox_style.css":1,"sites\/all\/modules\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/print\/print_ui\/css\/print_ui.theme.css":1,"sites\/all\/modules\/custom_search\/custom_search.css":1,"sites\/all\/themes\/ific\/stylesheets\/print.css":1,"sites\/all\/themes\/ific\/stylesheets\/screen.css":1,"sites\/all\/themes\/ific\/stylesheets\/style.css":1}},"colorbox":{"opacity":"0.85","current":"{current} of {total}","previous":"\u00ab Prev","next":"Next \u00bb","close":"Close","maxWidth":"98%","maxHeight":"98%","fixed":true,"mobiledetect":true,"mobiledevicewidth":"480px"},"custom_search":{"form_target":"_self","solr":0},"urlIsAjaxTrusted":{"\/privacy-policy":true}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"ific","theme_token":"RavgGABTZ1TZTlOIuoQXuAB-T_SCw13Z_08T0t7QOnw","js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"sites\/all\/libraries\/colorbox\/jquery.colorbox-min.js":1,"sites\/all\/modules\/colorbox\/js\/colorbox.js":1,"sites\/all\/modules\/colorbox\/styles\/default\/colorbox_style.js":1,"sites\/all\/modules\/custom_search\/js\/custom_search.js":1,"0":1,"http:\/\/w.sharethis.com\/button\/buttons.js":1,"1":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"sites\/all\/modules\/simplenews\/simplenews.css":1,"sites\/all\/modules\/calendar\/css\/calendar_multiday.css":1,"modules\/comment\/comment.css":1,"sites\/all\/modules\/date\/date_api\/date.css":1,"sites\/all\/modules\/date\/date_popup\/themes\/datepicker.1.7.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/views\/css\/views.css":1,"sites\/all\/modules\/ckeditor\/css\/ckeditor.css":1,"sites\/all\/modules\/colorbox\/styles\/default\/colorbox_style.css":1,"sites\/all\/modules\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/print\/print_ui\/css\/print_ui.theme.css":1,"sites\/all\/modules\/custom_search\/custom_search.css":1,"sites\/all\/themes\/ific\/stylesheets\/print.css":1,"sites\/all\/themes\/ific\/stylesheets\/screen.css":1,"sites\/all\/themes\/ific\/stylesheets\/style.css":1}},"colorbox":{"opacity":"0.85","current":"{current} of {total}","previous":"\u00ab Prev","next":"Next \u00bb","close":"Close","maxWidth":"98%","maxHeight":"98%","fixed":true,"mobiledetect":true,"mobiledevicewidth":"480px"},"custom_search":{"form_target":"_self","solr":0},"urlIsAjaxTrusted":{"\/privacy-policy":true}});
 //--><!]]>
 </script>
   <script>
@@ -58,7 +58,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
   <div id="skip-link">
     <a href="#main-content" class="element-invisible element-focusable">Skip to main content</a>
   </div>
-    <div id="fb-root"></div>
+    ﻿<div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
@@ -66,30 +66,6 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<!-- Quantcast Tag -->
-<script type="text/javascript">
-var _qevents = _qevents || [];
-
-(function() {
-var elem = document.createElement('script');
-elem.src = (document.location.protocol == "https:" ? "https://secure" : "http://edge") + ".quantserve.com/quant.js";
-elem.async = true;
-elem.type = "text/javascript";
-var scpt = document.getElementsByTagName('script')[0];
-scpt.parentNode.insertBefore(elem, scpt);
-})();
-
-_qevents.push({
-qacct:"p-k_ZdX5db0BKfh"
-});
-</script>
-
-<noscript>
-<div style="display:none;">
-<img src="//pixel.quantserve.com/pixel/p-k_ZdX5db0BKfh.gif" border="0" height="1" width="1" alt="Quantcast"/>
-</div>
-</noscript>
-<!-- End Quantcast tag -->
 <div id="page-wrapper">
   <div id="page">
     <header class="js-waypoint">
@@ -116,7 +92,7 @@ qacct:"p-k_ZdX5db0BKfh"
                 <h2 class="element-invisible">Secondary menu</h2><ul id="secondary-menu-links" class="links inline clearfix"><li class="menu-415 first"><a href="/about">About</a></li>
 <li class="menu-416"><a href="http://foodinsight.org/spanish" title="">Español</a></li>
 <li class="menu-417"><a href="/user" title="">Log In</a></li>
-<li class="menu-600 last"><a href="/content/donate" title="">Donate</a></li>
+<li class="menu-600 last"><a href="https://foodinsight.networkforgood.com/">Donate</a></li>
 </ul>              </div> <!-- /#secondary-menu -->
                         <div id="mobile-menu">
                 <ul class="mobile-menu clearfix">
@@ -124,7 +100,7 @@ qacct:"p-k_ZdX5db0BKfh"
                         <li><a href="/education">Education</a></li>
                         <li><a href="/research">Surveys</a></li>
                         <li><a href="/news">News</a></li>
-                        <li><a href="/donate">Donate</a></li>
+                        <li><a href="https://foodinsight.networkforgood.com/" target="_blank">Donate</a></li>
                         <li><a class="/about" href="/about">About</a></li>
 			<li><a href="/user">Log In</a></li>
                                         </ul>
@@ -141,7 +117,7 @@ qacct:"p-k_ZdX5db0BKfh"
   <input title="" class="custom-search-box form-text" placeholder="Search" type="text" id="edit-custom-search-blocks-form-1--2" name="custom_search_blocks_form_1" value="" size="15" maxlength="128">
 </div>
 <input type="hidden" name="delta" value="1">
-<input type="hidden" name="form_build_id" value="form-ZSuw0HTWm4PZPBIfqWKiN9xBjXGn3HnTjtvx9SjDeOY">
+<input type="hidden" name="form_build_id" value="form-pjaBcgI3wB0H3qo8bw73SuFBIdua_m_cjpHePvMuOFk">
 <input type="hidden" name="form_id" value="custom_search_blocks_form_1">
 <div class="form-actions form-wrapper" id="edit-actions"><input alt="Search" class="custom-search-button form-submit" type="image" id="edit-submit" name="op" src="http://www.foodinsight.org/sites/default/files/custom_search/search_0.png"></div></div></form></div>
           <div class="spacer" style="clear: both;"></div>
