--- a/a/af/aff/affiliatefunnel.com.html
+++ b/a/af/aff/affiliatefunnel.com.html
@@ -1,26 +1,11 @@
-<!--The following is the downloaded HTML source of the affiliatefunnel.com privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119010312id_/http%3A//www.affiliatefunnel.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the affiliatefunnel.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606015734id_/http%3A//www.affiliatefunnel.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <link rel="shortcut icon" href="favicon.ico">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Affiliate Funnel | Build YOUR Business!</title>
-
-        
-		<!-- <link rel="stylesheet" href="http://www.affiliatefunnel.com/min/g=maincss" type="text/css" /> 
-
-        <script type="text/javascript" src="http://www.affiliatefunnel.com/min/g=mainjs" /> -->
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script>
-/***********************************************
-* DHTML Window Widget- Dynamic Drive (www.dynamicdrive.com)
-* This notice must stay intact for legal use.
-* Visit http://www.dynamicdrive.com/ for full source code
-***********************************************/
-</script>
-
-	
-	
-
+        		<!-- <link rel="stylesheet" href="http://www.affiliatefunnel.com/min/g=maincss" type="text/css" />         <script type="text/javascript" src="http://www.affiliatefunnel.com/min/g=mainjs" /> --><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script>/************************************************ DHTML Window Widget- Dynamic Drive (www.dynamicdrive.com)* This notice must stay intact for legal use.* Visit http://www.dynamicdrive.com/ for full source code***********************************************/</script>		
 <style type="text/css">
 .surflink {
 	color: #FFFF00;
