--- a/a/al/all/allflashfiles.net.html
+++ b/a/al/all/allflashfiles.net.html
@@ -1,7 +1,8 @@
-<!--The following is the downloaded HTML source of the allflashfiles.net privacy policy that was archived on 2016-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161222234640id_/http%3A//www.allflashfiles.net/p/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the allflashfiles.net privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606015802id_/http%3A//www.allflashfiles.net/p/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
+<link type="text/css" rel="stylesheet" href="https://www.blogger.com/static/v1/widgets/58827200-widget_css_bundle.css">
 <link href="http://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet" type="text/css">
 <link href="https://plus.google.com/YOUR_ID" rel="me">
 <link href="https://plus.google.com/YOUR_ID/about" rel="author">
@@ -26,8 +27,6 @@
 <meta content="general" name="rating">
 <style type="text/css">
 <!-- /*
-<link type='text/css' rel='stylesheet' href='https://www.blogger.com/static/v1/widgets/454518911-widget_css_bundle.css' />
-<link type='text/css' rel='stylesheet' href='https://www.blogger.com/dyn-css/authorization.css?targetBlogID=2238797516888967626&amp;zx=548d3ba9-c503-418f-b284-049d7cb84ef7' />
 <style id='page-skin-1' type='text/css'><!--
 /* -------------------------------
 Name     :  SEO Fix Blogger Template
@@ -40,6 +39,7 @@ body{font-family:sans-serif;font-size:13px;color:#666;margin:0;background:#eee}a
 --></style>
 <!--Related post-->
 <!--end-->
+<link href="https://www.blogger.com/dyn-css/authorization.css?targetBlogID=2238797516888967626&amp;zx=9b083558-ded2-4ad8-b2cb-1cf9c831fd77" rel="stylesheet">
 </head>
 <!-- <body><div></div> -->
 <body class="loading">
@@ -105,6 +105,7 @@ body{font-family:sans-serif;font-size:13px;color:#666;margin:0;background:#eee}a
 </div><div class="widget Blog" data-version="1" id="Blog1">
 <div class="breadcrumbs"><span class="breadhome"><a href="http://www.allflashfiles.net/" rel="tag">Home </a> &gt; </span><span class="breadlabel">Privacy Policy</span></div>
 <div class="blog-posts hfeed">
+<!--Can't find substitution for tag [defaultAdStart]-->
 
                 <div class="date-outer">
               
@@ -351,7 +352,8 @@ body{font-family:sans-serif;font-size:13px;color:#666;margin:0;background:#eee}a
 </p>
 <a href="https://www.blogger.com/comment-iframe.g?blogID=2238797516888967626&amp;pageID=7143702040967727426" id="comment-editor-src"></a>
 <iframe allowtransparency="true" class="blogger-iframe-colorize blogger-comment-from-post" frameborder="0" height="410" id="comment-editor" name="comment-editor" src="" width="100%"></iframe>
-<script type="text/javascript" src="https://www.blogger.com/static/v1/jsbin/3629047462-comment_from_post_iframe.js"></script>
+<!--Can't find substitution for tag [post.friendConnectJs]-->
+<script src="https://www.blogger.com/static/v1/jsbin/3134186057-comment_from_post_iframe.js" type="text/javascript"></script>
 <script type="text/javascript">
             BLOG_CMT_createIframe('https://www.blogger.com/rpc_relay.html', '00240508368526570653');
           </script>
@@ -359,11 +361,9 @@ body{font-family:sans-serif;font-size:13px;color:#666;margin:0;background:#eee}a
 <p></p>
 <div id="backlinks-container">
 <div id="Blog1_backlinks-container">
-<a name="links"></a><h4>
-</h4>
+<a name="links"></a><h4><!--Can't find substitution for tag [post.backlinksLabel]--></h4>
 <p class="comment-footer">
-<a class="comment-link" href="" id="Blog1_backlinks-create-link" target="_blank">
-</a>
+<a class="comment-link" href="" id="Blog1_backlinks-create-link" target="_blank"><!--Can't find substitution for tag [post.createLinkLabel]--></a>
 </p>
 </div>
 </div>
@@ -372,6 +372,7 @@ body{font-family:sans-serif;font-size:13px;color:#666;margin:0;background:#eee}a
 
               </div></div>
             
+<!--Can't find substitution for tag [adEnd]-->
 </div>
 <div class="blog-pager" id="blog-pager">
 <a class="home-link" href="http://www.allflashfiles.net/">Home</a>
@@ -466,7 +467,7 @@ width:200px;
 <div class="widget HTML" data-version="1" id="HTML7">
 <div class="widget-content">
 <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle" style="display:block" data-ad-format="autorelaxed" data-ad-client="ca-pub-9206771144671041" data-ad-slot="3196156015"></ins>
+<ins class="adsbygoogle" style="display:block" data-ad-format="autorelaxed" data-ad-client="ca-pub-9206771144671041" data-ad-slot="4649825212"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -554,15 +555,15 @@ if (typeof document.onselectstart!="undefined" ) {
   ga('send', 'pageview');
 
 </script>
+<script src="https://apis.google.com/js/plusone.js" type="text/javascript"></script>
 
-<script type="text/javascript" src="https://www.blogger.com/static/v1/widgets/803954089-widgets.js"></script>
-<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+<script type="text/javascript" src="https://www.blogger.com/static/v1/widgets/3641759723-widgets.js"></script>
 <script type="text/javascript">
-window['__wavt'] = 'AOuZoY51eGy90xJOsXtoc4kTGE6VXzQ2Tg:1482450400914';_WidgetManager._Init('//www.blogger.com/rearrange?blogID\x3d2238797516888967626','//www.allflashfiles.net/p/privacy-policy.html','2238797516888967626');
-_WidgetManager._SetDataContext([{'name': 'blog', 'data': {'blogId': '2238797516888967626', 'bloggerUrl': 'https://www.blogger.com', 'title': 'Allflashfiles|The Home Of Firmware', 'pageType': 'static_page', 'pageId': '7143702040967727426', 'url': 'http://www.allflashfiles.net/p/privacy-policy.html', 'canonicalUrl': 'http://www.allflashfiles.net/p/privacy-policy.html', 'homepageUrl': 'http://www.allflashfiles.net/', 'searchUrl': 'http://www.allflashfiles.net/search', 'canonicalHomepageUrl': 'http://www.allflashfiles.net/', 'blogspotFaviconUrl': 'http://www.allflashfiles.net/favicon.ico', 'hasCustomDomain': true, 'enabledCommentProfileImages': true, 'gPlusViewType': 'FILTERED_POSTMOD', 'adultContent': false, 'analyticsAccountNumber': 'UA-55987914-1', 'useUniversalAnalytics': false, 'pageName': 'Privacy Policy', 'pageTitle': 'Allflashfiles|The Home Of Firmware: Privacy Policy', 'encoding': 'UTF-8', 'locale': 'en_GB', 'localeUnderscoreDelimited': 'en_gb', 'isPrivate': false, 'isMobile': false, 'isMobileRequest': false, 'mobileClass': '', 'isPrivateBlog': false, 'languageDirection': 'ltr', 'feedLinks': '\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Allflashfiles|The Home Of Firmware - Atom\x22 href\x3d\x22http://www.allflashfiles.net/feeds/posts/default\x22 /\x3e\n\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/rss+xml\x22 title\x3d\x22Allflashfiles|The Home Of Firmware - RSS\x22 href\x3d\x22http://www.allflashfiles.net/feeds/posts/default?alt\x3drss\x22 /\x3e\n\x3clink rel\x3d\x22service.post\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Allflashfiles|The Home Of Firmware - Atom\x22 href\x3d\x22https://www.blogger.com/feeds/2238797516888967626/posts/default\x22 /\x3e\n', 'meTag': '', 'openIdOpTag': '', 'mobileHeadScript': '', 'adsenseClientId': 'ca-pub-6249279398290578', 'adsenseHostId': 'ca-host-pub-1556223355139109', 'view': '', 'dynamicViewsCommentsSrc': '//www.blogblog.com/dynamicviews/4224c15c4e7c9321/js/comments.js', 'dynamicViewsScriptSrc': '//www.blogblog.com/dynamicviews/0d81398a922284ce', 'plusOneApiSrc': 'https://apis.google.com/js/plusone.js', 'sharing': {'platforms': [{'name': 'Get link', 'key': 'link', 'shareMessage': 'Get link', 'target': ''}, {'name': 'Facebook', 'key': 'facebook', 'shareMessage': 'Share to Facebook', 'target': 'facebook'}, {'name': 'BlogThis!', 'key': 'blogThis', 'shareMessage': 'BlogThis!', 'target': 'blog'}, {'name': 'Twitter', 'key': 'twitter', 'shareMessage': 'Share to Twitter', 'target': 'twitter'}, {'name': 'Pinterest', 'key': 'pinterest', 'shareMessage': 'Share to Pinterest', 'target': 'pinterest'}, {'name': 'Google+', 'key': 'googlePlus', 'shareMessage': 'Share to Google+', 'target': 'googleplus'}, {'name': 'Email', 'key': 'email', 'shareMessage': 'Email', 'target': 'email'}], 'googlePlusShareButtonWidth': 300, 'googlePlusBootstrap': '\x3cscript type\x3d\x22text/javascript\x22\x3ewindow.___gcfg \x3d {\x27lang\x27: \x27en_GB\x27};\x3c/script\x3e'}}}, {'name': 'features', 'data': {'widgetVisibility': true}}, {'name': 'messages', 'data': {'linkCopiedToClipboard': 'Link copied to clipboard', 'postLink': 'Post link'}}, {'name': 'template', 'data': {'name': 'custom', 'localizedName': 'Custom', 'isResponsive': false, 'isAlternateRendering': false, 'isCustom': true}}, {'name': 'view', 'data': {'classic': {'name': 'classic', 'url': '?view\x3dclassic'}, 'flipcard': {'name': 'flipcard', 'url': '?view\x3dflipcard'}, 'magazine': {'name': 'magazine', 'url': '?view\x3dmagazine'}, 'mosaic': {'name': 'mosaic', 'url': '?view\x3dmosaic'}, 'sidebar': {'name': 'sidebar', 'url': '?view\x3dsidebar'}, 'snapshot': {'name': 'snapshot', 'url': '?view\x3dsnapshot'}, 'timeslide': {'name': 'timeslide', 'url': '?view\x3dtimeslide'}, 'isMobile': false, 'title': 'Privacy Policy', 'description': ' If you require any more information or have any questions about our privacy policy, please feel free to contact us by email at allflashfile...', 'url': 'http://www.allflashfiles.net/p/privacy-policy.html', 'type': 'item', 'isSingleItem': true, 'isMultipleItems': false, 'isError': false, 'isPage': true, 'isPost': false, 'isHomepage': false, 'isArchive': false, 'isSearch': false, 'isLabelSearch': false, 'pageId': 7143702040967727426}}]);
+window['__wavt'] = 'AOuZoY4WXujqklaq1xfw92cJrK9HAQK1DQ:1496711744770';_WidgetManager._Init('//www.blogger.com/rearrange?blogID\x3d2238797516888967626','//www.allflashfiles.net/p/privacy-policy.html','2238797516888967626');
+_WidgetManager._SetDataContext([{'name': 'blog', 'data': {'blogId': '2238797516888967626', 'title': 'Allflashfiles|The Home Of Firmware', 'url': 'http://www.allflashfiles.net/p/privacy-policy.html', 'canonicalUrl': 'http://www.allflashfiles.net/p/privacy-policy.html', 'homepageUrl': 'http://www.allflashfiles.net/', 'searchUrl': 'http://www.allflashfiles.net/search', 'canonicalHomepageUrl': 'http://www.allflashfiles.net/', 'blogspotFaviconUrl': 'http://www.allflashfiles.net/favicon.ico', 'bloggerUrl': 'https://www.blogger.com', 'hasCustomDomain': true, 'httpsEnabled': false, 'enabledCommentProfileImages': true, 'gPlusViewType': 'FILTERED_POSTMOD', 'adultContent': false, 'analyticsAccountNumber': 'UA-55987914-1', 'encoding': 'UTF-8', 'locale': 'en-GB', 'localeUnderscoreDelimited': 'en_gb', 'languageDirection': 'ltr', 'isPrivate': false, 'isMobile': false, 'isMobileRequest': false, 'mobileClass': '', 'isPrivateBlog': false, 'feedLinks': '\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Allflashfiles|The Home Of Firmware - Atom\x22 href\x3d\x22http://www.allflashfiles.net/feeds/posts/default\x22 /\x3e\n\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/rss+xml\x22 title\x3d\x22Allflashfiles|The Home Of Firmware - RSS\x22 href\x3d\x22http://www.allflashfiles.net/feeds/posts/default?alt\x3drss\x22 /\x3e\n\x3clink rel\x3d\x22service.post\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Allflashfiles|The Home Of Firmware - Atom\x22 href\x3d\x22https://www.blogger.com/feeds/2238797516888967626/posts/default\x22 /\x3e\n', 'meTag': '', 'openIdOpTag': '', 'mobileHeadScript': '', 'adsenseClientId': 'ca-pub-6249279398290578', 'adsenseHostId': 'ca-host-pub-1556223355139109', 'adsenseHasAds': false, 'view': '', 'dynamicViewsCommentsSrc': '//www.blogblog.com/dynamicviews/4224c15c4e7c9321/js/comments.js', 'dynamicViewsScriptSrc': '//www.blogblog.com/dynamicviews/de69988a463c1469', 'plusOneApiSrc': 'https://apis.google.com/js/plusone.js', 'sharing': {'platforms': [{'name': 'Get link', 'key': 'link', 'shareMessage': 'Get link', 'target': ''}, {'name': 'Facebook', 'key': 'facebook', 'shareMessage': 'Share to Facebook', 'target': 'facebook'}, {'name': 'BlogThis!', 'key': 'blogThis', 'shareMessage': 'BlogThis!', 'target': 'blog'}, {'name': 'Twitter', 'key': 'twitter', 'shareMessage': 'Share to Twitter', 'target': 'twitter'}, {'name': 'Pinterest', 'key': 'pinterest', 'shareMessage': 'Share to Pinterest', 'target': 'pinterest'}, {'name': 'Google+', 'key': 'googlePlus', 'shareMessage': 'Share to Google+', 'target': 'googleplus'}, {'name': 'Email', 'key': 'email', 'shareMessage': 'Email', 'target': 'email'}], 'googlePlusShareButtonWidth': 300, 'googlePlusBootstrap': '\x3cscript type\x3d\x22text/javascript\x22\x3ewindow.___gcfg \x3d {\x27lang\x27: \x27en_GB\x27};\x3c/script\x3e'}, 'jumpLinkMessage': 'Read more &#187;', 'pageType': 'static_page', 'pageId': '7143702040967727426', 'pageName': 'Privacy Policy', 'pageTitle': 'Allflashfiles|The Home Of Firmware: Privacy Policy'}}, {'name': 'features', 'data': {'ga_social_hooks': 'false', 'unsupported_browser_message': 'false', 'lightbox_img_parsing': 'false', 'sharing_get_link_dialog': 'false'}}, {'name': 'messages', 'data': {'edit': 'Edit', 'linkCopiedToClipboard': 'Link copied to clipboard', 'ok': 'Ok', 'postLink': 'Post link'}}, {'name': 'template', 'data': {'name': 'custom', 'localizedName': 'Custom', 'isResponsive': false, 'isAlternateRendering': false, 'isCustom': true}}, {'name': 'view', 'data': {'classic': {'name': 'classic', 'url': '?view\x3dclassic'}, 'flipcard': {'name': 'flipcard', 'url': '?view\x3dflipcard'}, 'magazine': {'name': 'magazine', 'url': '?view\x3dmagazine'}, 'mosaic': {'name': 'mosaic', 'url': '?view\x3dmosaic'}, 'sidebar': {'name': 'sidebar', 'url': '?view\x3dsidebar'}, 'snapshot': {'name': 'snapshot', 'url': '?view\x3dsnapshot'}, 'timeslide': {'name': 'timeslide', 'url': '?view\x3dtimeslide'}, 'isMobile': false, 'title': 'Privacy Policy', 'description': ' If you require any more information or have any questions about our privacy policy, please feel free to contact us by email at allflashfile...', 'url': 'http://www.allflashfiles.net/p/privacy-policy.html', 'type': 'item', 'isSingleItem': true, 'isMultipleItems': false, 'isError': false, 'isPage': true, 'isPost': false, 'isHomepage': false, 'isArchive': false, 'isLabelSearch': false, 'pageId': 7143702040967727426}}]);
 _WidgetManager._RegisterWidget('_HeaderView', new _WidgetInfo('Header1', 'header2', null, document.getElementById('Header1'), {}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML5', 'main', null, document.getElementById('HTML5'), {}, 'displayModeFull'));
-_WidgetManager._RegisterWidget('_BlogView', new _WidgetInfo('Blog1', 'main', null, document.getElementById('Blog1'), {'cmtInteractionsEnabled': false, 'lightboxEnabled': true, 'lightboxModuleUrl': 'https://www.blogger.com/static/v1/jsbin/2371771562-lbx__en_gb.js', 'lightboxCssUrl': 'https://www.blogger.com/static/v1/v-css/368954415-lightbox_bundle.css'}, 'displayModeFull'));
+_WidgetManager._RegisterWidget('_BlogView', new _WidgetInfo('Blog1', 'main', null, document.getElementById('Blog1'), {'cmtInteractionsEnabled': false, 'lightboxEnabled': true, 'lightboxModuleUrl': 'https://www.blogger.com/static/v1/jsbin/1073670082-lbx__en_gb.js', 'lightboxCssUrl': 'https://www.blogger.com/static/v1/v-css/368954415-lightbox_bundle.css'}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML1', 'sidebar', null, document.getElementById('HTML1'), {}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML3', 'sidebar', null, document.getElementById('HTML3'), {}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_HTMLView', new _WidgetInfo('HTML7', 'sidebar', null, document.getElementById('HTML7'), {}, 'displayModeFull'));
