--- a/f/fb/fbd/fbdown.net.html
+++ b/f/fb/fbd/fbdown.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fbdown.net privacy policy that was archived on 2016-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161205154354id_/http%3A//www.fbdown.net/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fbdown.net privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606015912id_/http%3A//fbdown.net/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <title>FBDOWN.net - Our Privacy Policy</title>
@@ -7,33 +7,26 @@
 <meta name="keywords" content="download facebook videos,facebook online downloader, grab facebook online, free facebook video downloader,baixar vídeos do Facebook,baixar facebook">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
- 
- 
- 
- 
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
  
 <!--[if lt IE 9]>
-    <script src="js/html5shiv.js"></script>
-  <![endif]-->
+	<script src="js/html5shiv.js"></script>
+	<![endif]-->
  
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/apple-touch-icon-144-precomposed.png">
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114-precomposed.png">
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72-precomposed.png">
 <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57-precomposed.png">
 <link rel="shortcut icon" href="img/favicon.png">
-<script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://d31qbv1cthcecs.cloudfront.net/atrk.js"></script><script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/scripts.js"></script>
- 
-<script type="text/javascript">
-_atrk_opts = { atrk_acct:"CJ7Mm1aMp4Z36C", domain:"fbdown.net",dynamic: true};
-(function() { var as = document.createElement('script'); as.type = 'text/javascript'; as.async = true; as.src = "https://d31qbv1cthcecs.cloudfront.net/atrk.js"; var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(as, s); })();
-</script>
-<noscript><img src="https://d5nxst8fruw4z.cloudfront.net/atrk.gif?account=CJ7Mm1aMp4Z36C" style="display:none" height="1" width="1" alt=""/></noscript>
- 
-</head>
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+		(adsbygoogle = window.adsbygoogle || []).push({
+		google_ad_client: "ca-pub-9232253514792453",
+		enable_page_level_ads: true
+		});
+	</script>
+<link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/fhplmmllnpjjlncfjpbbpjadoeijkogc"></head>
 <body style="">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -44,17 +37,14 @@ _atrk_opts = { atrk_acct:"CJ7Mm1aMp4Z36C", domain:"fbdown.net",dynamic: true};
   ga('create', 'UA-44090370-1', 'fbdown.net');
   ga('send', 'pageview');
 
-</script>
+</script> <nav class="navbar navbar-default navbar-static-top" style="margin-bottom: 0px;" role="navigation">
 <div class="container">
-<div class="row clearfix">
-<div class="col-md-12 column">
-<nav class="navbar navbar-default" role="navigation">
 <div class="navbar-header">
 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="index.php"><img style="width:160px;margin-top:-5px" alt="Facebook Video Downloader" src="img/logo-facebook-video-downloader.png"></a>
 </div>
 <div class="collapse navbar-collapse" id="menu">
 <ul class="nav navbar-nav">
-<li>
+<li style="display:none">
 <a href="http://fbdown.net">Video Downloader</a>
 </li>
 <li class="dropdown">
@@ -67,33 +57,46 @@ _atrk_opts = { atrk_acct:"CJ7Mm1aMp4Z36C", domain:"fbdown.net",dynamic: true};
 <li><a href="how-to-download-private-facebook-videos-online.php">How to use Private video Downloader?</a></li>
 </ul>
 </li>
+<li class="dropdown">
+<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-option-vertical"></span> More <span class="caret"></span></a>
+<ul class="dropdown-menu">
 <li>
-<a href="private-downloader.php">Private Downloader</a>
+<a href="private-downloader.php"><span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span> Private Video Downloader</a>
 </li>
+<li role="separator" class="divider"></li>
 <li>
-<a href="https://chrome.google.com/webstore/detail/fbdown-video-downloader/fhplmmllnpjjlncfjpbbpjadoeijkogc" target="_blank"><img src="img/chrome.png" style="width:24px;"> Chrome Extension</a>
+<a target="_blank" href="http://twdown.net/"><img alt="twdown.net twitter video downloader" style="width:24px" src="img/twitter-video-downloader-twdown.net.png"> Twitter Video Downloader <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>
+</li>
+</ul>
 </li>
 </ul>
 <ul class="nav navbar-nav navbar-right">
 <li>
-<a href="about.php">About</a>
-</li>
-<li>
-<a href="contact.php">Contact us</a>
+<a href="https://chrome.google.com/webstore/detail/fbdown-video-downloader/fhplmmllnpjjlncfjpbbpjadoeijkogc" onclick="chrome.webstore.install()" id="install-button" target="_blank"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> <img src="img/chrome.png" style="width:24px;"> Chrome Extension</a>
 </li>
 </ul>
 </div>
+</div>
 </nav>
+<script>
+    var isChrome = !!window.chrome && !!window.chrome.webstore;
+    
+    if (!isChrome)
+    {
+        document.getElementById("install-button").href="https://chrome.google.com/webstore/detail/fbdown-video-downloader/fhplmmllnpjjlncfjpbbpjadoeijkogc";
+        document.getElementById("install-button").target="_blank";
+    }
+</script> <div class="jumbotron">
+<div class="container">
+<div class="row clearfix">
+<div class="col-md-12 column">
 <center>
-<br>
-</center> <div class="well">
-<center>
-<a href="index.php"><img class="img-responsive" src="img/fbdown.png" alt="Download Facebook Videos" title="Facebook Video Downloader Online"></a>
-<h1>
-Facebook Video Downloader Online
+<a href="index.php"><img class="img-responsive" src="img/fbdown.png" alt="Download Facebook Videos" title="Facebook Video Downloader Online" width="300px"></a>
+<h1 style="font-size:24px;margin-top:1%;">
+Facebook Video Downloader
 </h1>
-<h2>
-Privacy Policy
+<h2 style="margin-top: 0%;font-size:26px;">
+<small>Privacy Policy</small>
 </h2>
 <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
  
@@ -148,37 +151,21 @@ This document was last updated on November 15, 2013<br><br>
 <ins class="adsbygoogle responsive_1" style="display:block" data-ad-client="ca-pub-9232253514792453" data-ad-slot="1140773329" data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script> </center>
-</div>
-</div>
-</div>
-<div class="row clearfix">
-<div class="col-md-8 column">
-<h2 style="font-size:15px;">
-FBDOWN.net is a facebook video downloader online, this tool grabs direct links to download and save facebook videos online for free
-</h2>
-<p>
-1. Put the URL of the Facebook Video you want to Download.
-</p>
-<p>
-2. Click Download button to grab the video
-</p>
-<p>
-3. Right Click then Save as to download the video (HD or SD Quality).
-</p>
-</div>
-<div class="col-md-4 column">
- 
-</div>
-</div>
-<center style="display:none;">
+</script>
 </center>
-<div class="well">
+</div>
+</div>
+</div>
+</div>
+<div class="container">
+<div class="well col-md-12">
 <center>
-<strong>Facebook Video Downloader Online </strong> | <a href="privacy.php">Privacy Policy</a><br>
-Our 2nd Server &gt;&gt;: <a href="http://fbdown.net/"><strong>Online Video Downloader</strong></a>
+<strong>Facebook Video Downloader Online </strong> <br> <a href="privacy.php">Privacy Policy</a> | <a href="contact.php">Contact us</a> | <a href="about.php">About</a><br>
+More from FBDOWN.net &gt;&gt;: <a href="http://twdown.net/index.php"><strong>Twitter Video Downloader</strong></a>
 </center>
-</div></div>
-
+</div> </div>
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/scripts.js"></script>
 
 </body></html>
